--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -32,9 +32,11 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
+        
         with:
           source: ./
           destination: ./_site
+          theme: jekyll-theme-minimal
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
