--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -33,9 +33,8 @@ jobs:
         uses: actions/jekyll-build-pages@v1
         
         with:
-          source: ./
+          source: ./docs
           destination: ./_site
-          theme: jekyll-theme-minimal
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
